syntax = "proto3";
package transport_interface;

import "google/protobuf/timestamp.proto";
//import "google/protobuf/type.proto";
// имя должно начинаться так же как пакедж но с большой! и дальше также! одинаковое!
service Transport_interface{
    rpc establish_connection (ClientRequest) returns (ServerResponse);
}

enum StatusMsg{
     Ok = 0;
     Halt = 1;
     Error = 2;
     Proceed = 3;
}

enum ClientCommand{
	Connect = 0;
	Sending = 1;
}


message ClientRequest {
	ClientCommand command = 1;
	google.protobuf.Timestamp timestamp = 2;
	uint32 serial = 3;
	optional string payload = 4;
}

message ServerResponse { 
    StatusMsg msg_status = 1;
    optional string server_answer = 2;
    google.protobuf.Timestamp timestamp = 3;
}

